# demo_amazon_bestsellers

./: Cargo.toml  README.md  bestsellers.csv  config.toml
scripts/: start.sh
src/: config.rs  driver.rs  item.rs  lib.rs  main.rs
tests/: integration_test.rs
