[package]
name = "amazon-bestsellers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.0"
serde = { version = "1.0.152", features = ["derive"] }
thirtyfour = "0.31.0"
tokio = { version = "1.25.0", features = ["full"] }
