[package]
name = "amazon-bestsellers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
config = "0.13"
csv = "1.2"
futures = "0.3"
quote = "1.0.26"
serde = { version = "1", features = ["derive"] }
thirtyfour = "0.31"
tokio = { version = "1.25", features = ["full"] }
